--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</el-radio-group>
 				</el-form-item>
 				<el-form-item label="患者其他信息" prop="patientOtherInfo">
-					<el-input v-model="formData.patientOtherInfo" type="textarea" placeholder="请输入患者其他信息，如年龄、身高、体重等"
+					<el-input v-model="formData.patientOtherInfo" type="textarea" placeholder="请输入患者其他信息，如联系方式、年龄、身高、体重等可获得的信息"
 						:autosize="{minRows: 4,}" :style="{width: '100%'}"></el-input>
 				</el-form-item>
 				<el-form-item label="事件发生单位" prop="reactionOfUnit">
