--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- 1. 引入vue -->
-		<script src="./plugins/vue-2.6.14/vue.js"></script>
+		<script src="./plugins/vue-2.6.14/vue.min.js"></script>
 		<!-- 2. 引入样式 -->
 		<link rel="stylesheet" href="./plugins/element-ui-2.15.7/theme-chalk/index.css">
 		<!-- 3. 引入组件库 -->
